# fotosintesis

./: .dockerignore  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  skills-lock.json
backend/: .env.example  Dockerfile  alembic.ini  openapi-baseline.json  pyproject.toml
backend/app/: main.py
backend/app/api/: assistant.py  (+7 more)
backend/docs/: worker-operations.md
backend/migrations/: env.py
backend/scripts/: check_architecture.py  check_file_sizes.py  check_openapi_diff.py  export_openapi.py  run_evaluation.py  split_test_assistant_agent.py  split_tests.py
backend/tests/: _assistant_helpers.py  _provider_fallback_helpers.py  _system_providers_helpers.py  conftest.py  test_aspect_metadata.py  test_assistant_agent.py  test_assistant_agent_part1.py  test_assistant_agent_part10.py  test_assistant_agent_part11.py  test_assistant_agent_part12.py  test_assistant_agent_part2.py  test_assistant_agent_part3.py  test_assistant_agent_part4.py  test_assistant_agent_part5.py  test_assistant_agent_part6.py  test_assistant_agent_part7.py  test_assistant_agent_part8.py  test_assistant_agent_part9.py  test_auth_home.py  test_cors.py  test_enrichment_contracts.py  test_enrichment_jobs.py  test_enrichment_jobs_repository.py  test_enrichment_persistence_tables.py  test_evaluation_pipeline.py  test_fallback_chain_runner.py  test_graph_topology.py  test_identification_enrichment.py  test_jobs_contracts.py  test_jobs_repository.py  test_knowledge_rag.py  test_light_measurements.py  test_openapi_snapshot.py  test_plant_data_lookup.py  test_profile_garden.py  test_provider_fallback.py  test_provider_fallback_part1.py  test_provider_fallback_part2.py  test_provider_strict_schema.py  test_reminders.py  (+6 more)
(+874 files in other folders)
