[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "fotosintesis-backend"
version = "0.1.0"
description = "Fotosintesis AI backend API"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "argon2-cffi>=23.1.0",
  "asyncpg>=0.30.0",
  "bert-score>=0.3.13",
  "email-validator>=2.2.0",
  "fastapi[standard]>=0.115.6",
  "langgraph>=1.0.8",
  "llama-index-core>=0.12.0",
  "llama-index-vector-stores-postgres>=0.4.0",
  "pydantic-settings>=2.7.0",
  "python-dotenv>=1.0.1",
  "SQLAlchemy[asyncio]>=2.0.36",
  "uvicorn[standard]>=0.34.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "aiosqlite>=0.20.0",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.8.4"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
